<resources>
    <string name="app_name">Android Test</string>
    <string name="save">Save</string>
    <string name="enter_your_text_here">Enter your text here!</string>
    <string name="output">Output</string>
    <string name="invalid_input">Invalid input!</string>
</resources>